[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log_structured_kvstore"
version = "0.1.0"
description = "A log-structured key-value store implementation"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["key-value store", "log-structured", "database"]
dependencies = [
    "pytest==7.3.1",
    "hypothesis==6.75.1",
    "matplotlib==3.7.1",
    "black==23.3.0",
    "flake8==6.0.0",
    "click==8.1.3",
    "msgpack==1.0.5",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["aiofiles==23.1.0", "loguru==0.7.0"]

[project.urls]
Homepage = "https://github.com/yourusername/log-structured-kvstore"
"Bug Tracker" = "https://github.com/yourusername/log-structured-kvstore/issues"

[project.scripts]
kvstore = "log_structured_kvstore.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]